tests/paczka1/fuzzy1/36093486.err
Error in line 4: mgZM5V A85 0,0
Error in line 26: A606 A277 72,5
Error in line 13: dpmjqRH4JoK A277 230,5
Error in line 35: dpmjqRH4JoK A606 85,6
